objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>BU__c</fullName>
        <label>BU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Formation Initiale</fullName>
                </value>
                <value>
                    <fullName>Communication  Corporate</fullName>
                </value>
                <value>
                    <fullName>EMLYON FOREVER</fullName>
                </value>
                <value>
                    <fullName>Fondation</fullName>
                </value>
                <value>
                    <fullName>Projets Partenariats</fullName>
                </value>
                <value>
                    <fullName>Employabilité</fullName>
                </value>
                <value>
                    <fullName>Taxe</fullName>
                </value>
                <value>
                    <fullName>MBA</fullName>
                </value>
                <value>
                    <fullName>PGM</fullName>
                </value>
                <value>
                    <fullName>AMP</fullName>
                </value>
                <value>
                    <fullName>Executive Mastères</fullName>
                </value>
                <value>
                    <fullName>DUA</fullName>
                </value>
                <value>
                    <fullName>Prog. Courts</fullName>
                </value>
                <value>
                    <fullName>Intra</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Canal_de_communication_sortant__c</fullName>
        <label>Canal de communication sortant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Courrier</fullName>
                </value>
                <value>
                    <fullName>Téléphone</fullName>
                </value>
                <value>
                    <fullName>Réseaux sociaux</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cat_gorie__c</fullName>
        <label>Catégorie</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Réunion d&apos;information</fullName>
                </value>
                <value>
                    <fullName>Invitation événements</fullName>
                </value>
                <value>
                    <fullName>Information programmes</fullName>
                </value>
                <value>
                    <fullName>Information Corporate</fullName>
                </value>
                <value>
                    <fullName>Promotion commerciale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dedoublonage_effectue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dédoublonage effectué</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exercice__c</fullName>
        <description>Champ créé pour la reprise (à faire évoluer si besoin)</description>
        <label>Exercice</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lieu__c</fullName>
        <description>Champ créé pour la reprise (à faire évoluer si besoin)</description>
        <label>Lieu</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membres_net_de_la_campagne__c</fullName>
        <label>Membres net de la campagne</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priorit_dedoublonnage__c</fullName>
        <label>Priorité dédoublonnage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reprise_LOT_2015__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reprise LOT 2015</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Taux_d_ouverture__c</fullName>
        <label>Taux d&apos;ouverture</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inx__connect_with_Inxmail__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Cocher ce champ puis enregistrer afin d&apos;activer la connexion à Inxmail Professional</inlineHelpText>
        <label>Connect with Inxmail Professional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inx__connection_status__c</fullName>
        <formula>IF( inx__connect_with_Inxmail__c  = false, $Label.inx__Campaign_disconnected_from_Inxmail_Professional, 
IF( inx__connection_status_number__c  = -1,  $Label.inx__Invalid_Listname ,
IF( inx__connection_status_number__c  = -2,  $Label.inx__inx_connection_failed ,
IF( inx__connection_status_number__c  = -3,  $Label.inx__inx_not_active ,
IF( inx__connection_status_number__c  = 1, $Label.inx__Campaign_completely_sync_with_Inxmail_Professional,
IF( inx__connection_status_number__c  = 2, $Label.inx__Campaign_synchronizing_with_Inxmail_Professional,  
IF( inx__connection_status_number__c  = 3   &amp;&amp; inx__connect_with_Inxmail__c  = false, $Label.inx__Campaign_disconnected_from_Inxmail_Professional,  
IF ( NOT ISBLANK( inx__list_id__c ),  $Label.inx__Campaign_connected_with_Inxmail_Professional ,  $Label.inx__Campaign_disconnected_from_Inxmail_Professional ))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Affiche l&apos;état de connexion avec Inxmail Professional</inlineHelpText>
        <label>Connection Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inx__connection_status_number__c</fullName>
        <defaultValue>0</defaultValue>
        <description>internal field</description>
        <label>Connection Status Number</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inx__deletecampaign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Delete the Campaign in Salesforce.com after it has been successfully removed in Inxmail Professional</description>
        <inlineHelpText>Cocher ce champ pour supprimer la campagne ainsi que l&apos;ensemble de ses membres</inlineHelpText>
        <label>Delete Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inx__has_mail_attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>internal field: checked if the E-Mail has been attached as binary attachment to the campaign</description>
        <label>E-Mail is attached to Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inx__keep_in_sync__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Cocher ce champ puis enregistrer afin de rajouter, a posteriori, des membres à la campagne</inlineHelpText>
        <label>Synchronise additional campaign members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inx__leadcampaign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked Inxmail Professional will upload Leads</description>
        <inlineHelpText>Cocher ce champ afin d&apos;importer en tant que leads les destinataires présents dans Inxmail Professional</inlineHelpText>
        <label>Can Generate Leads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inx__list_id__c</fullName>
        <description>internal field: ID of the list</description>
        <externalId>true</externalId>
        <label>List ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inx__mailcontent__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Attaches Mailing as HTML or as Plaintext to Campaign</description>
        <inlineHelpText>Joindre le mailing HTML ou Texte à la campagne</inlineHelpText>
        <label>Attach Mailing To Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inx__net_members__c</fullName>
        <inlineHelpText>Nombre de destinataires pour lesquels le message a abouti</inlineHelpText>
        <label>Net Campaign Members</label>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>notEqual</operation>
            <value>Hard Bounced</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>notEqual</operation>
            <value>Illegal Value</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>notEqual</operation>
            <value>New</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>notEqual</operation>
            <value>Blacklist</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>notEqual</operation>
            <value>Not Sent</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>notEqual</operation>
            <value>Duplicate</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>inx__opening_rate__c</fullName>
        <formula>IF ((  inx__net_members__c  ) = 0, 0,(  NumberOfResponses  ) / (  inx__net_members__c ))</formula>
        <inlineHelpText>Afficher le taux d&apos;ouverture de la campagne</inlineHelpText>
        <label>Opening Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inx__sender_address__c</fullName>
        <defaultValue>$User.Email</defaultValue>
        <description>List property in Inxmail Professional for sender address</description>
        <inlineHelpText>Indiquer dans ce champ l&apos;adresse email de l&apos;expéditeur</inlineHelpText>
        <label>Sender Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>inx__update_data__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Activez l’option &quot;Mise à jour des données des Contacts/Pistes&quot; si vous souhaitez que les données de vos contacts/pistes soient actualisées dans Inxmail Professional</inlineHelpText>
        <label>Synchronise updated contact/lead data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>x18caracteres__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>x18caracteres</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Toutes_les_campagnes</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Membres_net_de_la_campagne__c</columns>
        <columns>inx__net_members__c</columns>
        <filterScope>Everything</filterScope>
        <label>Toutes les campagnes</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>Toutes_les_campagnes_connect_s_Inxmail</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>inx__connection_status__c</field>
            <operation>contains</operation>
            <value>Sync</value>
        </filters>
        <label>Toutes les campagnes synch. Inxmail</label>
    </listViews>
    <recordTypes>
        <fullName>Campagne_non_Emailing</fullName>
        <active>true</active>
        <description>Campagne non inxmail</description>
        <label>Campagne non Emailing</label>
    </recordTypes>
    <recordTypes>
        <fullName>inx__Standard_Campaign</fullName>
        <active>true</active>
        <description>This is an example Record Type for Non Inxmail Professional Campaigns. Please do not use. Instead create your own Record Type for other Campaigns.</description>
        <label>Non Inxmail Professional Email Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>inx__inxmail_professional_email_campaign</fullName>
        <active>true</active>
        <description>Use this record type to create and send mailings that will be dispatched only once. You can also check your recipients??? reactions.</description>
        <label>Inxmail Professional Email Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>inx__inxmail_professional_subscription_campaign</fullName>
        <active>true</active>
        <description>Use this record type to manage the subscriptions and unsubscriptions of those recipients who receive your regular, periodical mailings (e.g. newsletter).</description>
        <label>Inxmail Professional Subscription Campaign</label>
    </recordTypes>
    <sharingModel>FullAccess</sharingModel>
    <validationRules>
        <fullName>inx__permit_deleting_campaigns</fullName>
        <active>true</active>
        <description>Campaigns connected with Inxmail Professional should not be deleted if they are still running.</description>
        <errorConditionFormula>((inx__connect_with_Inxmail__c = true)  &amp;&amp; (ISPICKVAL(Status,&apos;Completed&apos;))  || (inx__connect_with_Inxmail__c = true)  &amp;&amp; (ISPICKVAL(Status,&apos;Aborted&apos;)))</errorConditionFormula>
        <errorMessage>Campaigns connected with Inxmail Professional should not be deleted if they are still running.</errorMessage>
    </validationRules>
</CustomObject>